@@ -11,7 +11,7 @@
 <input  id='title' type='text' name='node[title]'/><br/>
 
 <label for='node_target_klass'><%= _('class scope') %></label>
-<%= select('node', 'target_klass', Node.classes_for_form, {:include_blank => true} ) %><br/>
+<%= select('node', 'target_klass', Node.classes_for_form, {:include_blank => true}, {} ) %><br/>
 
 <label for='node_mode'><%= _('mode') %></label>
 <input  id='node_mode' type='text' name='node[mode]'/><br/>
