@@ -303,8 +303,8 @@ EXT_TYPE = [
   [ "gz"        , "application/x-gzip"             ],
   [ "hdf"       , "application/x-hdf"              ],
   [ "hqx"       , "application/mac-binhex40"       ],
-  [ "htm"       , "text/html"                      ],
   [ "html"      , "text/html"                      ],
+  [ "htm"       , "text/html"                      ],
   [ "ice"       , "x-conference/x-cooltalk"        ],
   [ "ief"       , "image/ief"                      ],
   [ "iges"      , "model/iges"                     ],
